--- a/README
+++ b/README
@@ -5,3 +5,12 @@ cd -
 gcc -c pars_data.c ./libft/get_next_line/get_next_line.c ./libft/get_next_line/get_next_line.h          compile
 run comanned
 ./doc/resources/filler_vm -p1 cmake-build-debug/filler -p2 doc/resources/grati.filler -v -f ./doc/resources/maps/map00
+
+
+
+
+run program
+
+-p1 cmake-build-debug/filler -p2 doc/resources/grati.filler -v -f ./doc/resources/maps/map00
+
+test program with test_file:
